# kos-embassy

./: Cargo.toml  Installation.md  README.md  rust-toolchain.toml
.cargo/: config.toml
scripts/: test_spi_echo.py  test_spi_echo_dsr.py
src/: board.rs  config.rs  ipc.rs  lib.rs  main.rs
src/drivers/: imu.rs  mod.rs
src/drivers/servo/: driver.rs  mod.rs  protocol.rs
src/tasks/: imu.rs  mod.rs  servo.rs  spi_echo_dsr.rs  spi_echo_test.rs
